Add a simple test to test Action object initialization.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4754 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/share/web/static/js-test/index.html
+++ b/t/TestApp-JiftyJS/share/web/static/js-test/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Widget.Lightbox - tests index</title>
+<title>jifty js tests</title>
 <script type="text/javascript" src="lib/JSAN.js" charset="UTF-8"></script>
 <script type="text/javascript" src="lib/Test/Harness.js" charset="UTF-8"></script>
 <script type="text/javascript" src="lib/Test/Harness/Browser.js" charset="UTF-8"></script>
@@ -8,7 +8,8 @@
 <body>
 <script type="text/javascript"><!--
     new Test.Harness.Browser().runTests(
-        "01.behaviour.html"
+        "01.behaviour.html",
+        "02.action.html"
     );
 // --></script>
 </body>
