jQuery in, cssQuery out.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jquery@4791 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/share/web/static/js-test/02.action.html
+++ b/t/TestApp-JiftyJS/share/web/static/js-test/02.action.html
@@ -6,10 +6,8 @@
     <script type="text/javascript" src="lib/Test/More.js" charset="UTF-8"></script>
 
     <script type="text/javascript" src="/static/js/prototype.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/cssquery/cssQuery.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/cssquery/cssQuery-level2.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/cssquery/cssQuery-level3.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/cssquery/cssQuery-standard.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="/static/js/jquery-1.2.1.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="/static/js/jquery_noconflict.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/behaviour.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/scriptaculous/builder.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/scriptaculous/effects.js" charset="UTF-8"></script>
