Turns out IE does not like a self-closing <span> tag.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/branches/jquery@5079 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/share/web/static/js-test/02.action.html
+++ b/t/TestApp-JiftyJS/share/web/static/js-test/02.action.html
@@ -4,15 +4,9 @@
     <script type="text/javascript" src="/static/js/jsan/JSAN.js" charset="UTF-8"></script>
     <script type="text/javascript" src="lib/Test/Builder.js" charset="UTF-8"></script>
     <script type="text/javascript" src="lib/Test/More.js" charset="UTF-8"></script>
-
-    <script type="text/javascript" src="/static/js/prototype.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/jquery-1.2.1.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/jquery_noconflict.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/behaviour.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/scriptaculous/builder.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/scriptaculous/effects.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="/static/js/scriptaculous/controls.js" charset="UTF-8"></script>
-
     <script type="text/javascript" src="/static/js/jifty.js" charset="UTF-8"></script>
     <script type="text/javascript">
     </script>
@@ -26,23 +20,24 @@
 
         <div class="hidden"><input type="hidden" value="TestApp::JiftyJS::Action::AddTwoNumbers" id="J:A-run-TestApp::JiftyJS::Action::AddTwoNumbers" name="J:A-run-TestApp::JiftyJS::Action::AddTwoNumbers"/></div>
         <div class="form_field argument-first_number">
-          <span class="preamble text argument-first_number"/>
+          <span class="preamble text argument-first_number"></span>
           <label for="J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers-S1182827" class="label text argument-first_number">first_number</label>
           <input type="text" class="widget text argument-first_number jifty_enter_handler_attached" value="" id="J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers-S1182827" name="J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers"/>
-          <span class="hints text argument-first_number"/>
-          <span id="errors-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="error text argument-first_number" style="display: none;"/>
-          <span id="warnings-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="warning text argument-first_number" style="display: none;"/>
-          <span id="canonicalization_note-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="canonicalization_note text argument-first_number" style="display: none;"/>
+          <span class="hints text argument-first_number"></span>
+          <span id="errors-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="error text argument-first_number" style="display: none;"></span>
+          <span id="warnings-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="warning text argument-first_number" style="display: none;"></span>
+          <span id="canonicalization_note-J:A:F-first_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="canonicalization_note text argument-first_number" style="display: none;"></span>
         </div>
 
         <div class="form_field argument-second_number">
-          <span class="preamble text argument-second_number"/>
+          <span class="preamble text argument-second_number"></span>
           <label for="J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers-S1192827" class="label text argument-second_number">second_number</label>
           <input type="text" class="widget text argument-second_number jifty_enter_handler_attached" value="" id="J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers-S1192827" name="J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers"/>
-          <span class="hints text argument-second_number"/>
-          <span id="errors-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="error text argument-second_number" style="display: none;"/>
-          <span id="warnings-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="warning text argument-second_number" style="display: none;"/>
-          <span id="canonicalization_note-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="canonicalization_note text argument-second_number" style="display: none;"/>
+          <span class="hints text argument-second_number"></span>
+
+          <span id="errors-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="error text argument-second_number" style="display: none;"></span>
+          <span id="warnings-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="warning text argument-second_number" style="display: none;"></span>
+          <span id="canonicalization_note-J:A:F-second_number-run-TestApp::JiftyJS::Action::AddTwoNumbers" class="canonicalization_note text argument-second_number" style="display: none;"></span>
         </div>
 
 
