Add a js test to test buttonToLink() function defined in bps_util.js
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5320 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-JiftyJS/share/web/static/js-test/index.html
+++ b/t/TestApp-JiftyJS/share/web/static/js-test/index.html
@@ -9,7 +9,8 @@
 <script type="text/javascript"><!--
     new Test.Harness.Browser().runTests(
         "01.behaviour.html",
-        "02.action.html"
+        "02.action.html",
+        "03.simple.html"
     );
 // --></script>
 </body>
